--- a/newgymweb.css
+++ b/newgymweb.css
@@ -116,7 +116,7 @@ header .navigation li a:hover
     transform: scale(0.5); 
 }
 
-@media (max-width: 600px)
+@media only screen and (max-width: 480px)
 {
     header
     {
