--- a/newgymweb.css
+++ b/newgymweb.css
@@ -174,6 +174,8 @@ header .navigation li a:hover
         background-repeat: no-repeat;
         cursor: pointer;
         z-index: 11;
+Float: right;
+
     }
     .togglemenu.active
     {
