--- a/newgymweb.css
+++ b/newgymweb.css
@@ -116,7 +116,7 @@ header .navigation li a:hover
     transform: scale(0.5); 
 }
 
-@media only screen and (max-width: 480px)
+@media print, screen and (max-width: 63.99875em)
 {
     header
     {
